terminada primera pasada de header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <figure>
+            <img src="../../../assets/images/logo.svg" alt="logo">
+        </figure>
+        <div class="user">
+            <h6>Netberry Shop</h6>
+            <h1>Carlos de la Cuera Gómez</h1>
+        </div>
+        <div class="hamburguer-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+</header>
