--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,1 +1,7 @@
-<p>cards works!</p>
+<main class="container">
+    <div class="title">
+        <h2>Consectetur</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <hr>
+    </div>
+</main>
