maquetación completa móvil

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -4,4 +4,36 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         <hr>
     </div>
+    <ul class="products">
+        <li>
+            <figure>
+                <img src="../../../assets/images/product1.jpg" alt="product">
+            </figure>
+            <div class="tags">
+                <span>Tag 1</span>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet quis placeat tenetur! Magni, odio voluptates suscipit ut dolores esse et illum cupiditate doloribus veritatis tempora vel corporis vitae deserunt?    </p>
+        </li>
+        <li>
+            <figure>
+                <img src="../../../assets/images/product2.jpg" alt="product">
+            </figure>
+            <div class="tags">
+                <span>Tag 1</span>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet quis placeat tenetur! Magni, odio voluptates suscipit ut dolores esse et illum cupiditate doloribus veritatis tempora vel corporis vitae deserunt?    </p>
+        </li>
+        <li>
+            <figure>
+                <img src="../../../assets/images/product3.jpg" alt="product">
+            </figure>
+            <div class="tags">
+                <span>Tag 1</span>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet quis placeat tenetur! Magni, odio voluptates suscipit ut dolores esse et illum cupiditate doloribus veritatis tempora vel corporis vitae deserunt?    </p>
+        </li>
+    </ul>
 </main>
