--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,1 +1,24 @@
-<p>carousel works!</p>
+<div class="carousel">
+    <div class="container">
+        <div class="title">
+            <h2>Consectetur</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <hr>
+        </div>
+        <div class="landscapes">
+            <img src="../../../assets/images/arrow.svg" alt="arrow" class="arrow left-arrow">
+            <div class="content-carousel">
+                <figure>
+                    <img src="../../../assets/images/landscape1.jpg" alt="landscape">
+                </figure>
+                <figure>
+                    <img src="../../../assets/images/landscape2.jpg" alt="landscape">
+                </figure>
+                <figure>
+                    <img src="../../../assets/images/landscape3.jpg" alt="landscape">
+                </figure>
+            </div>
+            <img src="../../../assets/images/arrow.svg" alt="arrow" class="arrow right-arrow">
+        </div>
+    </div>
+</div>
