--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -1,1 +1,24 @@
-<p>features works!</p>
+<div class="features">
+    <div class="container">
+        <div class="title">
+            <h2>Consectetur</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <hr>
+        </div>
+        <div class="features-content">
+            <figure>
+                <img src="../../../assets/images/vertical.jpg" alt="mountan bike">
+            </figure>
+            <div>
+                <h3>Lorem ipsum</h3>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
