--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <span>
+            &copy; Netberry Solutions 2021
+        </span>
+        <ul>
+            <li><a href="#">Fringilia</a></li>
+            <li>|</li>
+            <li><a href="#">Aliquam</a></li>
+            <li>|</li>
+            <li><a href="#">Bidemdum</a></li>
+        </ul>
+    </div>
+</footer>
