--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
         </figure>
         <div class="user">
             <h6>Netberry Shop</h6>
-            <h1>Carlos de la Cuera Gómez</h1>
+            <h1>Carlos de la Cuerda Gómez</h1>
         </div>
         <div class="hamburguer-menu">
             <span></span>
@@ -14,3 +14,4 @@
         </div>
     </div>
 </header>
+<div class="pushdown"></div>
