--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,14 @@
 header {
     width: 100%;
-    border-bottom: 1px solid var(--grey);
+    border-bottom: var(--border);
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(4px);
+    top: 0;
+    padding-bottom: var(--fbase);
+}
+.pushdown {
+    height: calc(var(--size)*8);
 }
 header .container {
     display: flex;
