--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -17,6 +17,12 @@
                 <figure>
                     <img src="../../../assets/images/landscape3.jpg" alt="landscape">
                 </figure>
+                <figure>
+                    <img src="../../../assets/images/landscape4.jpg" alt="landscape">
+                </figure>
+                <figure>
+                    <img src="../../../assets/images/landscape5.jpg" alt="landscape">
+                </figure>
             </div>
             <img src="../../../assets/images/arrow.svg" alt="arrow" class="arrow right-arrow">
         </div>
