--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -18,6 +18,10 @@
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio</li>
                 </ul>
+                <span>
+                    <i></i>
+                    <p>Proin vitae frinilla lectua ac vlugasd resis nec</p>
+                </span>
             </div>
         </div>
     </div>
