--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,16 +2,35 @@ footer {
     display: flex;
     width: 100%;
     background-color: var(--grey);
-    padding: calc(var(--size)*2) 0 0 0;
+    padding: calc(var(--size)*2) 0 calc(var(--size)*2) 0;
     margin-top: calc(var(--size)*2);
 }
-footer ul {
-    margin-left: auto;
-    text-align: right;
+footer ul, footer span {
+    margin: auto;
+    text-align: center;
 }
 footer li {
     display: inline-block;
     margin-top: calc(var(--size)*2);
     margin-bottom: calc(var(--size)*2);
     margin-right: calc(var(--size)*2);
+}
+@media (min-width: 960px) {
+    footer {
+        padding-bottom: calc(var(--size)*3);
+    }
+    footer .container {
+        width: 100%;
+        max-width: 1280px;
+    }
+    footer ul {
+        margin-right: 0;
+        margin-left: auto;
+        text-align: right;
+    }
+    footer span {
+        text-align: left;
+        margin-left: 0;
+        margin-right: auto;
+    }
 }
