--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,20 +5,16 @@ header {
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(4px);
     top: 0;
-    padding-bottom: var(--fbase);
+    padding: var(--size) 0;
+    z-index: 2;
+    position: fixed;
 }
 .pushdown {
     height: calc(var(--size)*8);
 }
-header .container {
-    display: flex;
-    flex-wrap: wrap;
-    padding: var(--size);
-    justify-content: center;
-}
+
 header figure {
     height: calc(var(--size)*5);
-    width: auto;
     display: inline-block;
 }
 header figure img {
@@ -31,17 +27,18 @@ header figure img {
     margin: auto 0 auto calc(var(--size)*2);
 }
 .user h1{
-    font-size: calc(var(--fbase)*5);
+    font-size: calc(var(--fbase)*4);
     margin-top: var(--fbase);
 }
 .hamburguer-menu {
-    margin-left: auto;
     margin-top: auto;
     margin-bottom: auto;
     height: calc(var(--size)*3);
     width: calc(var(--size)*4);
     display: inline-block;
-
+    cursor: pointer;
+    position: relative;
+    margin-left: auto;
 }
 .hamburguer-menu span {
     height: calc(var(--size)/2);
@@ -51,4 +48,24 @@ header figure img {
     display: block;
     margin-bottom: calc(var(--size)/2);
 }
-
+.hamburguer-menu span:last-child {
+    margin-bottom: 0;
+}
+.hamburguer-menu:hover span:first-child {
+    transform: rotate(-45deg);
+    transition: all 0.3s ease-in-out;
+    margin-top: 10px;
+}
+.hamburguer-menu:hover span:last-child {
+    transform: rotate(45deg);
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    margin-top: -15px;
+}
+.hamburguer-menu:hover span:first-child  + span {
+    width: 0;
+    transition: all 0.3s ease-in-out;
+}
+.hamburguer-menu span {
+    transition: all 0.3s ease-in-out;
+}
