--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,9 @@ body {
 .container {
     max-width: 1280px;
     padding: 0 calc(var(--size)*2);
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
 }
 h1 , h2 {
     font-family: var(--title);
