--- a/src/app/components/carousel/carousel.component.css
+++ b/src/app/components/carousel/carousel.component.css
@@ -15,6 +15,7 @@
     margin: auto 0;
     display: inline-block;
     cursor: pointer;
+    display: none;
 }
 .left-arrow {
     transform: rotate(180deg)
@@ -38,7 +39,6 @@
     display: flex;
     flex-wrap: wrap;
     left: 0;
-    transition: all 0.3s ease-in-out;
     height: calc(var(--size)*12);
     width: auto;
 }
@@ -57,5 +57,8 @@
         width: 33%;
         display: inline-block;
         margin: auto;
+    }
+    .arrow {
+        display: inline-block;
     }
 }
